# artifacts/api-server/src/routes/index.ts
@@ -7,6 +7,7 @@ import adminRouter from "./admin";
 import portalRouter from "./portal";
 import licenseRouter from "./license";
 import fieldRouter from "./field";
+import downloadsRouter from "./downloads";
 
 const router: IRouter = Router();
 
@@ -18,5 +19,6 @@ router.use(adminRouter);
 router.use(portalRouter);
 router.use(licenseRouter);
 router.use(fieldRouter);
+router.use(downloadsRouter);
 
 export default router;
